# py-statistics

./: README.md  pyproject.toml  requirements.txt  setup.py
data/ab-test/: control.csv  variation.csv
src/: ab_tests.ipynb
